--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="acad277.stanfield.ben.resumobile">
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,7 @@
         <activity android:name=".Job_edit" />
         <activity android:name=".Resume_view" />
         <activity android:name=".Preferences"></activity>
+
     </application>
 
 </manifest>
